# test-llm

./: .gitignore  README.md  Technical Report LLM Evaluation.md  evaluation_results.json  get_answer_keys.py  get_evaluation_results.py  get_llm_responses.py  get_responses.py  helper.py  main.py  pyproject.toml  questions.json  requirements.txt  start_api_servers.sh  test.py  visualization.ipynb  visualization1.ipynb
answer_keys/fake_patient1/: fake_patient1_doc10_NOTE.json  fake_patient1_doc1_RAD.json  fake_patient1_doc2_SP.json  fake_patient1_doc3_NOTE.json  fake_patient1_doc4_NOTE.json  fake_patient1_doc5_SP.json  fake_patient1_doc6_NOTE.json  fake_patient1_doc7_NOTE.json  fake_patient1_doc8_SP.json  fake_patient1_doc9_SP.json
answer_keys/fake_patient2/: fake_patient2_doc1_NOTE.json  fake_patient2_doc2_RAD.json  fake_patient2_doc3_RAD.json  fake_patient2_doc4_SP.json  fake_patient2_doc5_RAD.json  fake_patient2_doc6_NOTE.json  fake_patient2_doc7_SP.json  fake_patient2_doc8_NOTE.json  fake_patient2_doc9_NOTE.json
answer_keys/fake_patient3/: fake_patient3_doc1_NOTE.json  fake_patient3_doc2_SP.json  fake_patient3_doc3_NOTE.json  fake_patient3_doc4_SP.json  fake_patient3_doc5_NOTE.json  fake_patient3_doc6_NOTE.json  fake_patient3_doc7_NOTE.json  fake_patient3_doc8_NOTE.json
answer_keys/fake_patient4/: fake_patient4_doc1_NOTE.json  fake_patient4_doc2_RAD.json  fake_patient4_doc3_SP.json  fake_patient4_doc4_NOTE.json  fake_patient4_doc5_NOTE.json  fake_patient4_doc6_SP.json  fake_patient4_doc7_NOTE.json
answer_keys/fake_patient5/: fake_patient5_doc10_NOTE.json  (+9 more)
(+210 files in other folders)
